@@ -1,5 +1,5 @@
 /* User interface for extracting locale-dependent parameters.
-   Copyright (C) 1995,1996,1997,1999,2000,2001 Free Software Foundation, Inc.
+   Copyright (C) 1995,96,97,99,2000,01,02 Free Software Foundation, Inc.
    This file is part of the GNU C Library.
 
    The GNU C Library is free software; you can redistribute it and/or
@@ -48,7 +48,7 @@ nl_langinfo (item)
 #ifdef USE_IN_EXTENDED_LOCALE_MODEL
   data = l->__locales[category];
 #else
-  data = *_nl_current[category];
+  data = _NL_CURRENT_DATA (category);
 #endif
 
   if (index >= data->nstrings)
